--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
   <script>
     const stepper = document.querySelector('#stepper');
   </script>
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="ig-typography ig-scrollbar">
   <app-root></app-root>
 </body>
 </html>
